add a way to have test samples

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/bin
-/CMakeFiles
-Makefile
-CMakeCache.txt
-cmake_install.cmake
+**/bin
+**/CMakeFiles
+**/Makefile
+**/CMakeCache.txt
+**/cmake_install.cmake
